helm/velero/extra/base/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: velero
  name: minio
  labels:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: minio
spec:
  type: ClusterIP
  ports:
    - name: minio
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: minio-ui
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: minio
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: velero
  name: minio
  labels:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: minio
spec:
  replicas: 1
  serviceName: minio
  selector:
    matchLabels:
      kalexlab.xyz/app: backups
      kalexlab.xyz/component: minio
  template:
    metadata:
      labels:
        kalexlab.xyz/app: backups
        kalexlab.xyz/component: minio
    spec:
      nodeSelector:
        kubernetes.io/hostname: hermes
      restartPolicy: Always
      containers:
        - name: minio
          image: "quay.io/minio/minio"
          imagePullPolicy: Always
          args: ["server", "/data", "--console-address", ":9001"]

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 9001
              protocol: TCP

          resources:
            requests:
              memory: 100Mi
              cpu: 5m
            # limits:
            #   memory: 250Mi
            #   cpu: 50m

          readinessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            periodSeconds: 60

          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /data
              name: minio-data-pvc

          lifecycle:
            postStart:
              exec:
                command: [
                    "/bin/bash",
                    "-c",
                    '
                    until (/usr/bin/mc alias set myminio http://localhost:9000 "$MINIO_ROOT_USER" "$MINIO_ROOT_PASSWORD"); do
                    sleep 3;
                    done;

                    if [[ $(/usr/bin/mc ls myminio) ]]; then
                    exit 0;
                    fi;

                    /usr/bin/mc mb myminio/velero;
                    /usr/bin/mc mb myminio/longhorn;
                    exit 0;',
                  ]

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"

      enableServiceLinks: false
      automountServiceAccountToken: false

      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi

  volumeClaimTemplates:
    - metadata:
        name: minio-data-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: manual
        resources:
          requests:
            storage: 1Ti
