helm/velero/extra/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backups-ingress
  namespace: velero
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`backups.kalexlab.xyz`)
      services:
        - name: minio
          port: 9000
    - kind: Rule
      match: Host(`ui.backups.kalexlab.xyz`)
      services:
        - name: minio
          port: 9001
  tls:
    secretName: backups-ingress-certificate-secret
